Fixed spacing issues

--- a/website/public_html/css/formBE/css/style.css
+++ b/website/public_html/css/formBE/css/style.css
@@ -186,10 +186,6 @@ h2 {
   font-family: Poppins;
   font-size: 42px; }
 
-.main {
-  background: #f8f8f8;
-  padding: 5%; }
-
 .clear {
   clear: both; }
 
