--- a/website/public_html/css/style.css
+++ b/website/public_html/css/style.css
@@ -241,6 +241,7 @@ input[type="button"].big,
 
 #footer .copyright {
     font-size: 0.8em;
+    font-family: Ubuntu;
 }
 /* New */
 
